fix: add word-wrap style to tag description

--- a/frontend/src/components/bullet_chooser/stylesheet.styl
+++ b/frontend/src/components/bullet_chooser/stylesheet.styl
@@ -3,6 +3,7 @@
 .tag-description
   margin-top: 10px
   margin-bottom: 0
+  word-wrap: break-word
 
 .input
   position: relative
